---------------------------------------------------------------------------------------------------
Version: 1.0.5
Date: 2025.01.28
  Bugfixes:
    - Prevent the creation of recipes with multiple time the same ingredient
---------------------------------------------------------------------------------------------------
Version: 1.0.4
Date: 2025.01.26
  Compatibility:
    - Ignores Cerys science pack to prevent a softlock on the planet.
---------------------------------------------------------------------------------------------------
Version: 1.0.3
Date: 2025.01.26
  Compatibility:
    - EditorExtensions' lab will be ignored when setting up possible researches
---------------------------------------------------------------------------------------------------
Version: 1.0.2
Date: 2025.01.24
  Minor Features:
    - Made the productivity researches unit time customizable
  Balancing:
    - Made the default productivity researches unit time shorter
    - Made the default productivity researches unit amount lower
---------------------------------------------------------------------------------------------------
Version: 1.0.1
Date: 2025.01.24
  Compatibility:
    - Added compatibility with Cerys
  Changes:
    - Reworked big parts of the code to make future modifications easier
  Ease of use:
    - Improved some texts and added a bit of color on the component icon
---------------------------------------------------------------------------------------------------
Version: 1.0.0
Date: 2025.01.09
  Features:
    - Modify each science pack's recipes to add the science pack that where required to unlock it
    - A setting is avaible to chose between adding parents recursively or only the direct parents
    - Adds productivity researches for science packs that are used in other packs' recipes
    - Productivity research can be customized or completely disabled