@@ -1,0 +1,5 @@
+local update_data = require("main")
+
+if settings.startup["scienceception-final-fixes"].value then
+	update_data()
+end
