@@ -17,6 +17,7 @@ science-pack-productivity=Increase productivity of [item=__1__] recipes. Can be 
 change-recipe-productivity=__1__ productivity: __2__
 
 [mod-setting-name]
+scienceception-final-fixes=Load the mod during the final fixes phase
 scienceception-include-parents-recursively=Pack recipes include parent packs recursively
 scienceception-unlink-packs=Remove links between packs
 scienceception-ignore-for-prod-prerequisites=Ingore links for productivity research prerequisites 
@@ -25,9 +26,10 @@ scienceception-prod-count-formula=Productivity research ingredient count formula
 scienceception-prod-research-effect=Production bonus per research (percentage)
 scienceception-prod-research-max=Productivity research maximum level
 scienceception-prod-research-time=Productivity research units time
-scienceception-make-prod-for-leaves= Make productivity research for pack witch are not used in other recipes
+scienceception-make-prod-for-leaves=Make productivity research for pack witch are not used in other recipes
 
 [mod-setting-description]
+scienceception-final-fixes=Check this if some science packs seems to be ignored by Scienceception. Uncheck if needed for compatibility with other mods
 scienceception-unlink-packs=Make the specified packs ignore their parent/child relationship. Separate pair elements with "," and pairs with ";".
 scienceception-ignore-for-prod-prerequisites=Like the previous setting, but makes the packs ignore each other only for their productivity research prerequisites.
 scienceception-make-prod-researches= The production researches will use their child packs as ingredients.
